feat(claude): Migrated to new installer

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,7 @@ jobs:
         features:
           - adr-tools
           - chrome
+          - claude-code
           - codex
           - color
           - gemini-cli
