feat(gitlab): vscode devcontainer feature for gitlab added

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,7 @@ jobs:
           - codex
           - color
           - gemini-cli
+          - gitlab
           - hello
           - imagemagick
           - mc
@@ -69,6 +70,7 @@ jobs:
           - codex
           - color
           - gemini-cli
+          - gitlab
           - hello
           - imagemagick
           - mc
